# task_tracker

./: .env  .env-non-dev.sample  .env.sample  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docker/: app.sh  celery.sh
migrations/: env.py
migrations/versions/: 2023-12-02_initial.py  2023-12-05_employee_add_task_count.py
src/: __init__.py  config.py  database.py  main.py
src/auth/: base_config.py  manager.py  models.py
src/chat/: router.py  schemas.py
src/employee/: functions.py  models.py  router.py  schemas.py
src/function/: crud_object.py  for_router.py
src/operations/: models.py  router.py
src/pages/: router.py
src/report/: report.py  router.py
src/task/: functions.py  models.py  router.py  schemas.py
src/templates/: base.html  search.html
tests/: conftest.py  test_auth.py
