[tool.poetry]
name = "task_tracker"
version = "0.1.0"
description = ""
authors = ["kot <bafomet2016vitt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.104.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
