[tool.poetry]
name = "task_tracker"
version = "0.1.0"
description = ""
authors = ["kot <bafomet2016vitt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.104.1"}
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.23"}
fastapi-cache2 = "^0.2.1"
aioredis = "^2.0.1"
redis = "^5.0.1"
flower = "^2.0.1"
gunicorn = "^21.2.0"
alembic = "^1.12.1"
asyncpg = "^0.29.0"
Jinja2 = "^3.1.2"
pydantic = "^2.5.2"
pytest = "^7.4.3"
fastapi-users = "^12.1.2"
fastapi-users-db-sqlalchemy = "^6.0.1"
pytest-asyncio = "^0.23.2"
aiohttp = "^3.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "src",]
asyncio_mode="auto"
